[metadata]
name = edrn.bmdb
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Biomarker Database utilities and RDF server for Early Detection Research Network
license = apache-2.0
keywords = cancer, portal, data, rdf
version = file: src/edrn/bmdb/VERSION.txt


[options]
include_package_data = True
zip_safe = False
namespace_packages = edrn
package_dir =
    = src
packages = find:
python_requires = >= 3.9, <3.11
install_requires =
    rdflib ~= 6.1.0
    pymysql ~= 1.0.2
    pyramid ~= 2.0


[options.packages.find]
where = src


[options.package_data]
* = *.json


[options.extras_require]


[options.entry_points]
console_scripts =
    generate-bmdb-rdf   = edrn.bmdb.rdf:main
    fix-genenames-links = edrn.bmdb.genenames:main
    query-into-csv      = edrn.bmdb.query:main
    rdf-webserver       = edrn.bmdb.server:main
    correlate           = edrn.bmdb.correlation:main
    jsongraphic         = edrn.bmdb.jsongraphic:main
    descreport          = edrn.bmdb.descreport:main
    copystudies         = edrn.bmdb.copystudies:main
    report34            = edrn.bmdb.report34:main
    report50            = edrn.bmdb.report50:main
    report51            = edrn.bmdb.report51:main
    report52            = edrn.bmdb.report52:main
